--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,11 @@
       "esModuleInterop": true,
       "resolveJsonModule": true,
       "moduleResolution": "node",
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "baseUrl": ".",
+      "paths": {
+        "@/*": ["./src/*"]
+      }
     },
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
