--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
     "main": "dist/index.js",
     "types": "dist/index.d.ts",
     "scripts": {
-      "build": "tsc",
-      "dev": "tsc --watch"
+        "build": "tsc",
+        "dev": "tsc --watch"
     },
     "dependencies": {
-      "@supabase/supabase-js": "^2.49.4",
-      "dotenv": "^16.0.0"
+        "@supabase/supabase-js": "^2.49.4",
+        "dotenv": "^16.0.0"
     },
     "devDependencies": {
-      "typescript": "^5.0.0"
+        "@types/jest": "^29.5.14",
+        "typescript": "^5.0.0",
+        "vitest": "^3.1.3"
     }
-  }
-  
+}
